# multi_robots

./: .gitmodules  README.md
example_send_angle_to_dynamixel/: CMakeLists.txt  package.xml
example_send_angle_to_dynamixel/src/: follow_blue.cpp
image_editor/: CMakeLists.txt  nodelet_description.xml  package.xml  theta_s.rviz
image_editor/cfg/: Parameter.cfg
image_editor/include/: image_editor.h
image_editor/include/image_editor/: image_editor.h
image_editor/launch/: image_editor.launch
image_editor/src/: image_editor.cpp  image_editor_node.cpp  image_editor_nodelet.cpp
launch/: 99-realsense-libusb.rules  launch_devices.launch  rs.launch  run_chibi20.launch  setup_chibi20.launch  theta_s_ros.launch
multi_robots/: CMakeLists.txt  package.xml
multi_robots/config/: color_detector.yaml  hsv.yaml  image_editor.yaml  target_roombas.yaml
multi_robots/config/image_hsv/: roomba1_hsv.yaml  roomba2_hsv.yaml  roomba3_hsv.yaml  roomba4_hsv.yaml  roomba5_hsv.yaml  roomba6_hsv.yaml
multi_robots/config/lidar/: roomba0_lidar.yaml  roomba1_lidar.yaml  roomba2_lidar.yaml  roomba4_lidar.yaml  roomba5_lidar.yaml  roomba7_lidar.yaml  roomba8_lidar.yaml  roomba9_lidar.yaml
multi_robots/launch/: bag_record.launch  color_fix.launch  debug_params.launch  launch_devices.launch  launch_softwares.launch  republisher.launch  rs_rgbd.launch  run_chibi20.launch  setup_chibi20.launch  setup_devices.launch
multi_robots/rviz/: debug_roomba1.rviz  debug_roomba2.rviz  debug_roomba3.rviz  debug_roomba4.rviz  fix_color_roomba1.rviz  fix_color_roomba2.rviz  fix_color_roomba3.rviz  fix_color_roomba4.rviz  fix_color_roomba5.rviz  fix_color_roomba6.rviz
multi_robots/tools/: rosbag_analisys.py
multi_robots/udevs/: 95-dynamixel.rules  97-theta-s.rules  98-roomba.rules  99-hokuyo-lidar.rules
multi_robots_tf/: CMakeLists.txt  package.xml
multi_robots_tf/config/: static_roomba_tf.yaml  static_tf.yaml
multi_robots_tf/include/multi_robots_tf/: roomba_tf2_broadcaster.h  static_roomba_tf2_broadcaster.h  static_tf2_broadcaster.h
multi_robots_tf/launch/: roomba_tf2.launch  static_tf2.launch
multi_robots_tf/src/: roomba_tf2_broadcaster.cpp  static_roomba_tf2_broadcaster.cpp  static_tf2_broadcaster.cpp
navigator/: CMakeLists.txt  package.xml
navigator/config/dwa/: dwa_param.yaml  dwa_param_follow.yaml  karasawa_dwa_param.yaml
navigator/config/random/: dkan_all_points_relation.yaml  dkan_all_waypoints.yaml  dkan_cross_relation.yaml  dkan_cross_waypoints.yaml  dkan_half_points_relation.yaml
navigator/config/waypoints/: center_loop_waypoints.yaml  dkan_loop_waypoints.yaml
navigator/config/waypoints/dkan_all/: roomba0.yaml  roomba1.yaml  roomba2.yaml  roomba3.yaml  roomba4.yaml  roomba5.yaml  roomba6.yaml  roomba7.yaml  roomba8.yaml  roomba9.yaml
navigator/config/waypoints/dkan_cross/: roomba0.yaml  roomba1.yaml  roomba2.yaml  roomba3.yaml  roomba4.yaml  roomba5.yaml  roomba6.yaml  roomba7.yaml  roomba8.yaml  roomba9.yaml
navigator/config/waypoints/dkan_spread/: roomba1.yaml  roomba5.yaml  roomba6.yaml
navigator/config/waypoints/dkan_spread_ver2/: roomba3.yaml
navigator/config/waypoints/karasawa/: roomba2_karasawa.yaml  roomba3_karasawa.yaml  roomba4_karasawa.yaml
navigator/config/waypoints/karasawa_spare/: roomba4_karasawa.yaml  roomba5_karasawa.yaml
navigator/include/navigator/: amcl_pose_republisher.h  message_reviser.h  rviz_waypoints_creater.h  target_follower.h  waypoints_manager.h
navigator/launch/: bag_record.launch  dkan_half_walk.launch  dkan_loop.launch  dkan_random_walk.launch  fix_parameter_for_dwa.launch  follow_walk.launch  karasawa.launch  make_random_waypoints.launch  random_walk.launch  run_spread.launch  rviz_navigator.launch  rviz_waypoints_creater.launch  setup_spread.launch
navigator/rviz/: duet_bag_play.rviz  dwa.rviz  roomba1.rviz  roomba2.rviz  roomba3.rviz  roomba4.rviz  roomba5.rviz  roomba6.rviz  roomba7.rviz  roomba8.rviz  roomba9.rviz  waypoints_creater.rviz
navigator/src/: amcl_pose_republisher.cpp  message_reviser.cpp  message_reviser_node.cpp  rviz_waypoints_creater.cpp  target_follower.cpp  target_follower_node.cpp  waypoints_manager.cpp  waypoints_manager_node.cpp
pole_eliminator/: CMakeLists.txt  package.xml
pole_eliminator/launch/: pole_eliminator.launch
pole_eliminator/src/: pole_eliminator.cpp  (+1 more)
roomba_dynamixel_tools/: README.md
roomba_dynamixel_tools/dynamixel_angle_msgs/: CMakeLists.txt  package.xml
roomba_dynamixel_tools/dynamixel_angle_msgs/msg/: DynamixelAngle.msg
roomba_dynamixel_tools/roomba_dynamixel_controller/: CMakeLists.txt  package.xml
roomba_dynamixel_tools/roomba_dynamixel_controller/config/param/: roomba_dynamixel_controller.yaml
roomba_dynamixel_tools/roomba_dynamixel_controller/include/dynamixel_tester/: dynamixel_tester.h
roomba_dynamixel_tools/roomba_dynamixel_controller/include/roomba_dynamixel_controller/: roomba_dynamixel_controller.h
roomba_dynamixel_tools/roomba_dynamixel_controller/launch/: dynamixel_tester.launch  roomba_dynamixel_controller.launch  teleop_roomba_dynamixel.launch
roomba_dynamixel_tools/roomba_dynamixel_controller/src/: dynamixel_tester.cpp  roomba_dynamixel_controller.cpp  teleop_dynamixel_angle.cpp
roomba_visualizer/: CMakeLists.txt  README.md  package.xml
roomba_visualizer/config/: amcl.yaml
roomba_visualizer/config/roomba1/: initial_pose.yaml
roomba_visualizer/config/roomba2/: initial_pose.yaml
roomba_visualizer/config/roomba3/: initial_pose.yaml
roomba_visualizer/config/roomba4/: initial_pose.yaml
roomba_visualizer/config/roomba5/: initial_pose.yaml
roomba_visualizer/config/roomba6/: initial_pose.yaml
roomba_visualizer/include/roomba_visualizer/: roomba_visualizer.h
roomba_visualizer/launch/: amcl.launch  amcl_spread.launch  create_target_publish_bag.launch  pose_diff.launch  visualize.launch
roomba_visualizer/rviz/: amcl.rviz
roomba_visualizer/src/: pose_diff_calculator.cpp  roomba_visualizer.cpp
tools/: bag_record.sh
udev_rules/: 94-black-roomba.rules  95-dynamixel.rules  96-realsense-libusb.rules  97-theta-s.rules  99-hokuyo-lidar.rules
(+17 files in other folders)
