<?xml version="1.0"?>
<package format="2">
    <name>example_send_angle_to_dynamixel</name>
    <version>0.0.0</version>
    <description>example</description>
    <maintainer email="amsl@todo.todo">amsl</maintainer>
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>color_detector_msgs</depend>
    <depend>dynamixel_angle_msgs</depend>

    <export>
    </export>
</package>