<?xml version="1.0"?>
<package format="2">
    <name>image_editor</name>
    <version>0.0.0</version>
    <description>The image_editor package</description>

    <maintainer email="amsl@todo.todo">amsl</maintainer>

    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>nodelet</depend>
    <depend>pluginlib</depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_description.xml" />
    </export>
</package>
