<?xml version="1.0"?>
<package format="2">
  <name>multi_robots</name>
  <version>0.0.0</version>
  <description>The multi_robots package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="amsl@todo.todo">amsl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>D</license>
  <license>O</license>
  <license>O</license>
  <license>T</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/multi_robots</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>chibi20_2</build_depend>
  <build_depend>color_detector</build_depend>
  <build_depend>dynamixel_workbench_controllers</build_depend>
  <build_depend>multi_robots_tf</build_depend>
  <build_depend>pole_eliminator</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>roomba_500driver_meiji</build_depend>
  <build_depend>roomba_dynamixel_controller</build_depend>
  <build_depend>urg_node</build_depend>
  <build_export_depend>chibi20_2</build_export_depend>
  <build_export_depend>color_detector</build_export_depend>
  <build_export_depend>dynamixel_workbench_controllers</build_export_depend>
  <build_export_depend>multi_robots_tf</build_export_depend>
  <build_export_depend>pole_eliminator</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>roomba_500driver_meiji</build_export_depend>
  <build_export_depend>roomba_dynamixel_controller</build_export_depend>
  <build_export_depend>urg_node</build_export_depend>
  <exec_depend>chibi20_2</exec_depend>
  <exec_depend>color_detector</exec_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>
  <exec_depend>multi_robots_tf</exec_depend>
  <exec_depend>pole_eliminator</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>roomba_500driver_meiji</exec_depend>
  <exec_depend>roomba_dynamixel_controller</exec_depend>
  <exec_depend>urg_node</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
