<?xml version="1.0"?>
<package format="2">
  <name>roomba_visualizer</name>
  <version>0.0.0</version>
  <description>The roomba_visualizer package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>color_detector_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>amcl</depend>
  <depend>multi_robots_tf</depend>
  <depend>pole_eliminator</depend>
</package>
