<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_angle_msgs</name>
  <version>0.0.0</version>
  <description>The dynamixel_angle_msgs package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
